--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <druid3.version>1.2.19</druid3.version>
     <knife4j.versioon>4.3.0</knife4j.versioon>
     <jwt.version>0.9.1</jwt.version>
+    <pagehelper.version>1.4.7</pagehelper.version>
   </properties>
 
   <dependencyManagement>
@@ -67,6 +68,12 @@
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>2.3.1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.github.pagehelper</groupId>
+        <artifactId>pagehelper-spring-boot-starter</artifactId>
+        <version>${pagehelper.version}</version>
       </dependency>
 
     </dependencies>
