--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -63,6 +63,11 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
+
 
     </dependencies>
 </project>
