--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
 
     </dependencies>
 </project>
